--- a/index.qmd
+++ b/index.qmd
@@ -14,7 +14,7 @@ about:
 
 :test_tube: **May 2022 - present**: Modulating melanocytic cell-states  as a potential strategy for melanoma interception
 
-#### Grduate Student with [ Martin McMahon](https://uofuhealth.utah.edu/huntsman/labs/mcmahon)
+#### Grduate Student with [  Dr. Martin McMahon](https://uofuhealth.utah.edu/huntsman/labs/mcmahon)
 
 :mouse2: **2016 - 2022**: Characterized mouse models of Lung Adenocarcinoma
 
