--- a/about.qmd
+++ b/about.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Under Construction"
+title: "Michael Scherzer's Research Publications"
 ---
 
 [Full list here @ Google Scholar](https://scholar.google.com/citations?user=KXR4ptoAAAAJ&hl=en)
