--- a/index.qmd
+++ b/index.qmd
@@ -31,7 +31,7 @@ about:
 
 ## Most Recent Publication
 
-Commentary:[Perilesional Epigenomes Distinguish Melanocytic Nevus Subtypes](https://www.sciencedirect.com/science/article/pii/S0022202X23019607?via%3Dihub) ![testsetse](docs/Scherzer_JID_Commentary_Figure_mts.svg){fig-align="right" width=100% fig-alt="A drawing of an elephant."}
+Commentary:[Perilesional Epigenomes Distinguish Melanocytic Nevus Subtypes](https://www.sciencedirect.com/science/article/pii/S0022202X23019607?via%3Dihub) ![testsetse](docs/Scherzer_JID_Commentary_Figure_mts.svg){fig-align="right" width=100%}
 
 
 
