--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Michael Scherzer, PhD"
 subtitle: "I’m a cancer biologist using genetics and cell biology to answer interesting questions about melanocyte/melanoma biology"
+
 from: markdown+emoji
 about:
   template: jolla
@@ -10,7 +11,6 @@ about:
     - icon: envelope
       text: Email
       href: "mailto:michael.scherzer@hci.utah.edu"
-    
 ---
 ::: {#about-block}
 :::
@@ -38,7 +38,9 @@ about:
 
 ## Most Recent Publication
 
-Commentary:[Perilesional Epigenomes Distinguish Melanocytic Nevus Subtypes](https://www.sciencedirect.com/science/article/pii/S0022202X23019607?via%3Dihub) ![testsetse](docs/Scherzer_JID_Commentary_Figure_mts.svg){fig-align="right" width=100%}
+Commentary:[Perilesional Epigenomes Distinguish Melanocytic Nevus Subtypes](https://www.sciencedirect.com/science/article/pii/S0022202X23019607?via%3Dihub) 
+
+![](docs/Scherzer_JID_Commentary_Figure_mts.svg){fig-align="right" width=100%}
 
 
 
