added some pubs

--- a/publications/index.qmd
+++ b/publications/index.qmd
@@ -5,6 +5,16 @@ listing:
     contents: ay_23-24.yml
     sort: "date desc"
     template: ../html/listing.ejs
+    
+  - id: ay_22-23
+    contents: ay_22-23.yml
+    sort: "date desc"
+    template: ../html/listing.ejs
+    
+  - id: ay_20-21
+    contents: ay_20-21.yml
+    sort: "date desc"
+    template: ../html/listing.ejs
 
 title-block-banner: "#EE6A24"
 page-layout: full
@@ -16,6 +26,16 @@ toc-title: Academic year
 ## 2023–24
 
 :::{#ay_23-24}
+:::
+
+## 2022–23
+
+:::{#ay_22-23}
+:::
+
+## 2020–21
+
+:::{#ay_20-21}
 :::
 
 
