--- a/publications/index.qmd
+++ b/publications/index.qmd
@@ -20,6 +20,11 @@ listing:
     contents: ay_19-20.yml
     sort: "date desc"
     template: ../html/listing.ejs
+    
+  - id: ay_13-16
+    contents: ay_13-16.yml
+    sort: "date desc"
+    template: ../html/listing.ejs
 
 title-block-banner: "#EE6A24"
 page-layout: full
@@ -46,5 +51,10 @@ toc-title: Academic year
 ## 2019–20
 
 :::{#ay_19-20}
+:::
+
+## 2013–16
+
+:::{#ay_13-16}
 :::
 
