--- a/index.qmd
+++ b/index.qmd
@@ -35,6 +35,11 @@ about:
 
 * M.Eng in Bioengineering | 2013 - 2015  -->
 
+## Snow Prediction at Alta
+
+![](snow.JPG)
+
+
 
 ## Most Recent Publication
 
