--- a/snow.Rmd
+++ b/snow.Rmd
@@ -53,7 +53,7 @@ theme_rjt <- function (base_size = 12, base_family = "Times New Roman") {
                                     vjust = 0),
     axis.title.y = element_text(angle = 90, vjust = 1,
                                 margin = margin(r = half_line),
-                                size = base_size * 1.1, face = "bold"),
+                                size = base_size * 1, face = "bold"),
     axis.title.y.right = element_text(angle = -90, vjust = 0,
                                       margin = margin(l = half_line)),
     legend.background = element_rect(color = NA),
@@ -176,9 +176,9 @@ p<- ggplot(data = data6, aes(x = TIME, y=accum_snow)) +
   # scale_fill_viridis(discrete=TRUE)+
   #scale_color_manual(values = my_colors) + scale_fill_manual(values = my_colors)+
    ggtitle("Snow Predication at Alta, scraped from https://www.inscc.utah.edu/") +theme(plot.title = element_text(hjust = 0.5))+
-  scale_x_datetime(date_breaks = '12 hour', date_labels = "%m/%d %H", minor_breaks = "12 hour")+
+  scale_x_datetime(date_breaks = '12 hour', date_labels = "%b %d %H %M %p", minor_breaks = "12 hour")+
   theme(axis.text.x = element_text(angle = 45, vjust = 0.5))+
-  theme(plot.margin = margin(1, 1, 1, 1, "cm"))
+  theme(plot.margin = margin(2, 2, 2, 2, "cm"))
 
 ggsave(filename = "snow.JPG", dpi = "retina", width = 8, height = 6,plot = p)
 p
