--- a/snow.Rmd
+++ b/snow.Rmd
@@ -176,7 +176,7 @@ p<- ggplot(data = data6, aes(x = TIME, y=accum_snow)) +
   # scale_fill_viridis(discrete=TRUE)+
   #scale_color_manual(values = my_colors) + scale_fill_manual(values = my_colors)+
    ggtitle("Snow Predication at Alta, scraped from https://www.inscc.utah.edu/") +theme(plot.title = element_text(hjust = 0.5))+
-  scale_x_datetime(date_breaks = '12 hour', date_labels = "%b %d %H %M %p", minor_breaks = "12 hour")+
+  scale_x_datetime(date_breaks = '12 hour', date_labels = "%b %d %H %M %p")+
   theme(axis.text.x = element_text(angle = 45, vjust = 0.5))+
   theme(plot.margin = margin(2, 2, 2, 2, "cm"))
 
