--- a/snow.Rmd
+++ b/snow.Rmd
@@ -15,7 +15,7 @@ library(stringr)
 library(xml2)
 ```
 ```{r}
-theme_rjt <- function (base_size = 12, base_family = "Times New Roman") {
+theme_rjt <- function (base_size = 12, base_family = "Helvetica") {
   half_line <- base_size/2
   theme(
     line = element_line(color = "black", linewidth = .5,
@@ -38,7 +38,7 @@ theme_rjt <- function (base_size = 12, base_family = "Times New Roman") {
                                hjust = 1),
     axis.text.y.right = element_text(margin = margin(l = .8 * half_line/2),
                                      hjust = 0),
-    axis.ticks = element_line(color = "black", linewidth = .5),
+    axis.ticks = element_line(color = "black", linewidth = 1),
     axis.ticks.length = unit(half_line / 1.5, "pt"),
     axis.ticks.length.x = NULL,
     axis.ticks.length.x.top = NULL,
@@ -164,27 +164,9 @@ is.Date(data6$time)
 
 data6$TIME<- ymd_hms(data6$TIME)
 
-p<- ggplot(data = data6, aes(x = TIME, y=accum_snow)) + 
-  geom_line() + 
-#geom_ribbon(aes(y = mean, ymin = mean -se, ymax = mean+se, fill = well), alpha = .3) +
-  xlab("Time") + 
-  ylab("Predicted Accumulated Snow (inches)") +
-  theme_rjt() +  
-  theme(legend.key = element_blank()) +
-  theme(legend.title = element_blank()) + 
-  #  scale_color_viridis(discrete=TRUE) +
-  # scale_fill_viridis(discrete=TRUE)+
-  #scale_color_manual(values = my_colors) + scale_fill_manual(values = my_colors)+
-   ggtitle("Snow Predication at Alta, scraped from https://www.inscc.utah.edu/") +theme(plot.title = element_text(hjust = 0.5))+
-  scale_x_datetime(date_breaks = '18 hour', date_labels = "%b%d-%I%p")+
-  theme(axis.text.x = element_text(angle = 45, vjust = 0.5))+
-  theme(plot.margin = margin(2, 2, 2, 2, "cm"))
-
-ggsave(filename = "snow.JPG", dpi = "retina", width = 8, height = 6,plot = p)
-p
 ```
 
-```{r warning=F}
+```{r warning=F, echo=FALSE,message=FALSE,comment=FALSE}
 breaks<- range(data6$TIME)
 max<- max(data6$TIME)
 min<- min(data6$TIME)
@@ -192,7 +174,7 @@ snow_max<- max(data6$accum_snow)
 
 
 p<- ggplot(data = data6, aes(x = TIME, y=accum_snow)) + 
-  geom_line(color="blue", size=2) + 
+  geom_line(color="red", size=2) + 
 #geom_ribbon(aes(y = mean, ymin = mean -se, ymax = mean+se, fill = well), alpha = .3) +
   xlab("Time") + 
   ylab("Predicted Accumulated Snow (inches)") +
@@ -203,19 +185,18 @@ p<- ggplot(data = data6, aes(x = TIME, y=accum_snow)) +
   # scale_fill_viridis(discrete=TRUE)+
   #scale_color_manual(values = my_colors) + scale_fill_manual(values = my_colors)+
    ggtitle("Snow Predication at Alta, scraped from https://www.inscc.utah.edu/") +theme(plot.title = element_text(hjust = 0.5))+
-  scale_x_datetime(date_breaks = '6 hour', date_labels = "%a %b %d %I%p", expand=c(0,1), limits = breaks)+
+  scale_x_datetime(date_breaks = '8 hour', date_labels = "%a %b %d %I%p", expand=c(0,0), limits = c(min,max))+
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5))+
   theme(plot.margin = margin(1, 2, 1, 1, "cm"))
 
 
 p+scale_y_continuous(breaks = seq(0, snow_max+5, 5), 
-                   limits = c(0,snow_max+1), 
+                   limits = c(0,snow_max+5), 
                    expand = c(.1,1))->p
+p+coord_cartesian(clip = "off")->p
 
-p
-coord_cartesian(expand = T, clip = "on", xlim = c(min+1, max+1))
 
-ggsave(filename = "snow.JPG", dpi = "retina", width = 16, height = 12,plot = p)
+ggsave(filename = "snow.JPG", dpi = "retina", width = 8, height = 6,plot = p)
 ```
 
 
