--- a/snow.Rmd
+++ b/snow.Rmd
@@ -151,9 +151,13 @@ data3<- unite(data = data2,col = "day", COLLINS:MT, sep = ":")
 data4<- unite(data = data3,col = "time", c(day,hour), sep = ":")
 data5<- mutate(data4, TIME = mdy_h(time))
 data5 %>% rename("accum_snow" = "V27")-> data6
+data6 %>% rename("temp" = "BALDY")-> data6
+
 data6$group= "group"
 
 data6$accum_snow<- str_replace_all(string = data6$accum_snow, pattern = '"', replacement="")
+data6$temp<- str_replace_all(string = data6$xtemp, pattern = "F", replacement="")
+
 data6$time<- as.factor(data6$TIME)
 
 data6$accum_snow<- as.numeric(data6$accum_snow)
@@ -171,11 +175,12 @@ breaks<- range(data6$TIME)
 max<- max(data6$TIME)
 min<- min(data6$TIME)
 snow_max<- max(data6$accum_snow)
+data6$temp<-as.numeric(data6$temp)
 
 
-p<- ggplot(data = data6, aes(x = TIME, y=accum_snow)) + 
-  geom_line(color="red", size=2) + 
-#geom_ribbon(aes(y = mean, ymin = mean -se, ymax = mean+se, fill = well), alpha = .3) +
+p<- ggplot(data = data6, aes(x = TIME)) + 
+  geom_line(color="red", size=2, aes(y=accum_snow)) +
+  geom_line(aes(y=temp), color="blue",size=2)+
   xlab("Time") + 
   ylab("Predicted Accumulated Snow (inches)") +
   theme_rjt() +  
@@ -187,15 +192,17 @@ p<- ggplot(data = data6, aes(x = TIME, y=accum_snow)) +
    ggtitle("Snow Predication at Alta, scraped from https://www.inscc.utah.edu/") +theme(plot.title = element_text(hjust = 0.5))+
   scale_x_datetime(date_breaks = '8 hour', date_labels = "%a %b %d %I%p", expand=c(0,0), limits = c(min,max))+
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5))+
-  theme(plot.margin = margin(1, 2, 1, 1, "cm"))
+  theme(plot.margin = margin(2, 2, 1, 1, "cm"))
 
 
-p+scale_y_continuous(breaks = seq(0, snow_max+5, 5), 
-                   limits = c(0,snow_max+5), 
-                   expand = c(.1,1))->p
+p+scale_y_continuous(breaks = seq(0, 50, 5), 
+                   limits = c(0,30), 
+                   expand = c(.1,1), sec.axis = sec_axis(trans = ~., name="temperature at MT BALDY"))+ theme(axis.title.y.right = element_text(color = "blue"))->p
 p+coord_cartesian(clip = "off")->p
 
-p
+
+p 
+
 ggsave(filename = "snow.JPG", dpi = "retina", width = 8, height = 6,plot = p)
 ```
 
@@ -232,5 +239,30 @@ link2<-tail(tmp2, n=1)
 link1<-"https://www.inscc.utah.edu/~steenburgh/ml/"
 
 link<-paste(link1,link2,sep = "")
+```
+```{r}
+df <- data.frame(
+  trt = c( 2, 3, 3.8, 5, 6),
+  resp = c( 2.5, 3, 3.8, 3, 3.8),
+  upper = c( 3, 3.3, 4.5, 3.3, 4.5),
+  lower = c( 2, 2.4, 3.4, 2.4, 3.4)
+)
+
+p <- ggplot() +
+  geom_point(data = df, 
+                aes(x = trt, 
+                    y = resp)) +
+  geom_errorbar(data = df, 
+                aes(x = trt, 
+                    y = resp, 
+                    ymin = lower, 
+                    ymax = upper), 
+                width = 0) +
+  coord_flip() +
+  theme_bw() +
+  theme(plot.margin = margin(0.5, 3, 0.5, 0.5, "cm"))
+
+p+  theme(plot.margin = margin(0.5, 3, 0.5, 0.5, "cm"))
+
 ```
 
