--- a/index.qmd
+++ b/index.qmd
@@ -37,6 +37,192 @@ about:
 
 ## Snow Prediction at Alta
 
+```{r results='hide',message=FALSE,warning=FALSE, collapse=TRUE, echo=FALSE}
+library(tidyverse)
+library(data.table)
+library(lubridate)
+library(ggplot2)
+library(rvest)
+library(stringr)
+library(xml2)
+
+
+theme_rjt <- function (base_size = 12, base_family = "Helvetica") {
+  half_line <- base_size/2
+  theme(
+    line = element_line(color = "black", linewidth = .5,
+                        linetype = 1, lineend = "butt"),
+    rect = element_rect(fill = "white", color = "black",
+                        linewidth = .5, linetype = 1),
+    text = element_text(family = base_family, face = "plain",
+                        color = "black", size = base_size,
+                        lineheight = .9, hjust = .5, vjust = .5,
+                        angle = 0, margin = margin(), debug = FALSE),
+    axis.line = element_blank(),
+    axis.line.x = NULL,
+    axis.line.y = NULL,
+    axis.text = element_text(size = base_size * 1.1, color = "black"),
+    axis.text.x = element_text(margin = margin(t = .8 * half_line/2),
+                               vjust = 1),
+    axis.text.x.top = element_text(margin = margin(b = .8 * half_line/2),
+                                   vjust = 0),
+    axis.text.y = element_text(margin = margin(r = .8 * half_line/2),
+                               hjust = 1),
+    axis.text.y.right = element_text(margin = margin(l = .8 * half_line/2),
+                                     hjust = 0),
+    axis.ticks = element_line(color = "black", linewidth = 1),
+    axis.ticks.length = unit(half_line / 1.5, "pt"),
+    axis.ticks.length.x = NULL,
+    axis.ticks.length.x.top = NULL,
+    axis.ticks.length.x.bottom = NULL,
+    axis.ticks.length.y = NULL,
+    axis.ticks.length.y.left = NULL,
+    axis.ticks.length.y.right = NULL,
+    axis.title.x = element_text(margin = margin(t = half_line),
+                                vjust = 1, size = base_size * 1.3,
+                                face = "bold"),
+    axis.title.x.top = element_text(margin = margin(b = half_line),
+                                    vjust = 0),
+    axis.title.y = element_text(angle = 90, vjust = 1,
+                                margin = margin(r = half_line),
+                                size = base_size * 1, face = "bold"),
+    axis.title.y.right = element_text(angle = -90, vjust = 0,
+                                      margin = margin(l = half_line)),
+    legend.background = element_rect(color = NA),
+    legend.spacing = unit(.4, "cm"),
+    legend.spacing.x = NULL,
+    legend.spacing.y = NULL,
+    legend.margin = margin(.2, .2, .2, .2, "cm"),
+    legend.key = element_rect(fill = "gray95", color = "white"),
+    legend.key.size = unit(1.2, "lines"),
+    legend.key.height = NULL,
+    legend.key.width = NULL,
+    legend.text = element_text(size = rel(.8)),
+    legend.text.align = NULL,
+    legend.title = element_text(hjust = 0),
+    legend.title.align = NULL,
+    legend.position = "right",
+    legend.direction = NULL,
+    legend.justification = "center",
+    legend.box = NULL,
+    legend.box.margin = margin(0, 0, 0, 0, "cm"),
+    legend.box.background = element_blank(),
+    legend.box.spacing = unit(.4, "cm"),
+    panel.background = element_rect(fill = "white", color = NA),
+    panel.border = element_rect(color = "black",
+                                fill = NA, linewidth = 1),
+    panel.grid.major = element_line(color = "gray90", linewidth = .5),
+    panel.grid.minor = element_blank(),
+    panel.spacing = unit(base_size, "pt"),
+    panel.spacing.x = NULL,
+    panel.spacing.y = NULL,
+    panel.ontop = FALSE,
+    strip.background = element_rect(fill = "white", color = "gray30"),
+    strip.text = element_text(color = "black", size = base_size),
+    strip.text.x = element_text(margin = margin(t = half_line,
+                                                b = half_line)),
+    strip.text.y = element_text(angle = -90,
+                                margin = margin(l = half_line,
+                                                r = half_line)),
+    strip.text.y.left = element_text(angle = 90),
+    strip.placement = "inside",
+    strip.placement.x = NULL,
+    strip.placement.y = NULL,
+    strip.switch.pad.grid = unit(0.1, "cm"),
+    strip.switch.pad.wrap = unit(0.1, "cm"),
+    plot.background = element_rect(color = NA),
+    plot.title = element_text(size = base_size * 1, hjust = .5,
+                              vjust = 1, face = "bold",
+                              margin = margin(b = half_line * 1.2)),
+    plot.title.position = "panel",
+    plot.subtitle = element_text(size = base_size * 1.3,
+                                 hjust = .5, vjust = 1,
+                                 margin = margin(b = half_line * .9)),
+    plot.caption = element_text(size = rel(0.9), hjust = 1, vjust = 1,
+                                margin = margin(t = half_line * .9)),
+    plot.caption.position = "panel",
+    plot.tag = element_text(size = rel(1.2), hjust = .5, vjust = .5),
+    plot.tag.position = "topleft",
+    plot.margin = margin(rep(base_size, 4)),
+    complete = TRUE
+  )
+}
+
+page <- read_html("https://www.inscc.utah.edu/~steenburgh/ml/")
+
+page %>%
+  html_nodes("a") %>%       # find all links
+  html_attr("href") %>%
+  str_subset("gfsl")->tmp2
+
+link2<-tail(tmp2, n=1)
+link1<-"https://www.inscc.utah.edu/~steenburgh/ml/"
+
+link<-paste(link1,link2,sep = "")
+
+
+data<- fread(link, blank.lines.skip = T)
+
+data2<- unite(data = data,col = "hour",VALID:MOUNTAIN, sep = "")
+
+data3<- unite(data = data2,col = "day", COLLINS:MT, sep = ":")
+data4<- unite(data = data3,col = "time", c(day,hour), sep = ":")
+data5<- mutate(data4, TIME = mdy_h(time))
+data5 %>% rename("accum_snow" = "V27")-> data6
+data6 %>% rename("temp" = "T/RH")-> data6
+
+data6$group= "group"
+
+data6$accum_snow<- str_replace_all(string = data6$accum_snow, pattern = '"', replacement="")
+data6$temp<- str_replace_all(string = data6$temp, pattern = "F", replacement="")
+
+data6$time<- as.factor(data6$TIME)
+
+data6$accum_snow<- as.numeric(data6$accum_snow)
+
+data6$TIME<- parse_date_time(data6$TIME, "YmdHMS", tz = "America/Denver")
+
+is.Date(data6$time)
+
+data6$TIME<- ymd_hms(data6$TIME)
+
+breaks<- range(data6$TIME)
+max<- max(data6$TIME)
+min<- min(data6$TIME)
+snow_max<- max(data6$accum_snow)
+data6$temp<-as.numeric(data6$temp)
+
+
+p<- ggplot(data = data6, aes(x = TIME)) + 
+  geom_line(color="red", size=2, aes(y=accum_snow)) +
+  geom_line(aes(y=temp), color="blue",size=2)+
+  xlab("Time") + 
+  ylab("Predicted Accumulated Snow (inches)") +
+  theme_rjt() +  
+  theme(legend.key = element_blank()) +
+  theme(legend.title = element_blank()) + 
+  #  scale_color_viridis(discrete=TRUE) +
+  # scale_fill_viridis(discrete=TRUE)+
+  #scale_color_manual(values = my_colors) + scale_fill_manual(values = my_colors)+
+   ggtitle("Snow Predication at Alta, scraped from https://www.inscc.utah.edu/") +theme(plot.title = element_text(hjust = 0.5))+
+  scale_x_datetime(date_breaks = '8 hour', date_labels = "%a %b %d %I%p", expand=c(0,0), limits = c(min,max))+
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5), axis.text.y.left = element_text(color = "red"), axis.title.y.left = element_text(color = "red"))+
+  theme(plot.margin = margin(2, 2, 1, 1, "cm"), axis.text.y.right = element_text(color = "blue"))
+
+
+p+scale_y_continuous(breaks = seq(0, 55, 5), 
+                   limits = c(0,55), 
+                   expand = c(.1,1), sec.axis = sec_axis(trans = ~., name="temperature at MT BALDY", breaks = seq(0,60, 5)))+ theme(axis.title.y.right = element_text(color = "blue"))->p
+p+coord_cartesian(clip = "off")->p
+
+
+ggsave(filename = "snow.svg", dpi = "retina", width = 8, height = 6,plot = p)
+ggsave(filename = "snow.jpg", dpi = "retina", width = 8, height = 6,plot = p)
+
+
+```
+
+
 ![](snow.svg)
 
 
