--- a/snow.Rmd
+++ b/snow.Rmd
@@ -13,9 +13,6 @@ library(ggplot2)
 library(rvest)
 library(stringr)
 library(xml2)
-install.packages("svglite")
-install.packages("inotify-tools")
-library(inotify-tools)
 ```
 ```{r}
 theme_rjt <- function (base_size = 12, base_family = "Helvetica") {
@@ -194,8 +191,8 @@ p<- ggplot(data = data6, aes(x = TIME)) +
   #scale_color_manual(values = my_colors) + scale_fill_manual(values = my_colors)+
    ggtitle("Snow Predication at Alta, scraped from https://www.inscc.utah.edu/") +theme(plot.title = element_text(hjust = 0.5))+
   scale_x_datetime(date_breaks = '8 hour', date_labels = "%a %b %d %I%p", expand=c(0,0), limits = c(min,max))+
-  theme(axis.text.x = element_text(angle = 90, vjust = 0.5))+
-  theme(plot.margin = margin(2, 2, 1, 1, "cm"))
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5), axis.text.y.left = element_text(color = "red"), axis.title.y.left = element_text(color = "red"))+
+  theme(plot.margin = margin(2, 2, 1, 1, "cm"), axis.text.y.right = element_text(color = "blue"))
 
 
 p+scale_y_continuous(breaks = seq(0, 55, 5), 
